added views for the routes, I will condense the login and register to one page next

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,6 +18,15 @@
   <title></title>
 </head>
 <body>
+  <div class="homebutton">
+    <a href="/">Return Home</a>
+  </div>
+
+  <div class="login">
+    <a href="/login"> Login </a>
+  </div>
+
+
   <%= yield %>
 </body>
 </html>
