added index page html stuff, also linked up the routes

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,24 @@
-index.erb
+<title> Index page </title>
+
+<head>
+
+  <div class="index_main_title">
+    <h1 align="center"><strong>Welcome to <em>Survey Squirrels</em></strong></h1>
+    <h6 align="center">A Survey taking site...</div>
+  </div>
+
+</head>
+
+
+<body>
+  <div clas="index_main_body">
+    <!-- this needs to be a form -->
+    <!-- ----------------------- -->
+    <p><a href="/login"> EMAIL </a></p>
+    <p><a href="/login"> PASSWORD </a></p>
+    <hr>
+    <p><a href="/register"> REGISTER </a></p>
+    <p><a href="/login"> LOGIN </a></p>
+    <hr>
+  </div>
+</body>
