--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -28,10 +28,12 @@
       <br><br>
       Choose a Password: <input type="password" name="password" placeholder="Password">
       <br><br>
-      <!-- What's your Name: <input type="text" name="name" placeholder="John Doe">
-      <br><br> -->
+      What's your Name: <input type="text" name="name" placeholder="John Doe">
+      <br><br>
       <input type="submit" value="Register!">
-    </form>
+    </form> 
+
+
 
 
     <!-- <p><a href="/login"> EMAIL </a></p>
@@ -39,6 +41,6 @@
     <hr>
     <p><a href="/register"> REGISTER </a></p>
     <p><a href="/login"> LOGIN </a></p>
-    <hr> -->
+    <hr>
   </div>
 </body>
