--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,6 +26,14 @@
     <a href="/login"> Logout </a>
   </div>
 
+  <div class="right_nav_bar">
+    <a href="/surveys"> Surveys </a>
+  </div>
+
+  <div class="right_nav_bar_2">
+    <a href="/survey/new"> New Survey </a>
+  </div>
+
 
   <%= yield %>
 </body>
