--- a/app/views/new_survey.erb
+++ b/app/views/new_survey.erb
@@ -1,1 +1,19 @@
-new_survey.erb
+<body>
+
+<form action="/survey" method="post">
+  What is the survey?
+  <br>
+  <input type="text" name="title">
+
+  
+  <br>
+  <br>
+  <input type="submit" value="submit">
+
+
+</form>
+
+
+
+
+</body>
