css for navbar is implemented. homepage is complete. TODO CSS styling.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,13 +19,10 @@
   <title></title>
 </head>
 <body>
-  <div class="homebutton">
-    <a href="/">Return Home</a>
-  </div>
-
-  <div class="login">
-    <a href="/login"> Logout </a>
-  </div>
+  <ul class="navbar">
+    <li><a  href="/">Return Home</a></li>
+    <li><a  href="/login"> Logout </a></li>
+  </ul>
 
 
   <%= yield %>
