--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -3,7 +3,7 @@
 <head>
 <div class="homepage">
   <h1><strong>Create a Survey</strong></h1>
-  <h2>Welcome <%= User.find(session_current_user_id).email%></h2>
+  <h3>Welcome <%= User.find(session_current_user_id).email%></h3>
   <form action="/survey" method="post">
 
 
@@ -17,7 +17,7 @@
   <h1>Find a Survey to Take</h1>
   <%allsurveys = Survey.all %>
     <% allsurveys.each do |survey| %>
-    <p><a href="/survey/<%=survey.id%>"></p></a>
+<p><a href="/survey/<%=survey.title%>"><%=survey.title%></p></a>
     <%end%>
 
 
