--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,9 +2,36 @@ html {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
+.homepage {
+  text-align: center;
+}
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
 
+li {
+    float: left;
+}
 
+.navbar a:link, a:visited {
+    display: block;
+    width: 120px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #98bf21;
+    text-align: center;
+    padding: 4px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.navbar a:hover, a:active {
+    background-color: #7A991A;
+}
 
 .index_main_body{
   position: absolute;
@@ -16,7 +43,7 @@ html {
 }
 
 
-a:link {
+ a:link {
     color: green;
     text-decoration: none;
 }
