--- a/app/views/single_survey.erb
+++ b/app/views/single_survey.erb
@@ -1,1 +1,27 @@
-single_survey.erb
+<h1 class="view_survey_title">Take the '<%=@survey_name%>'</h1>
+
+<form action="<%=@id%>/submit" method="post">
+<% @questions.each do |question| %>
+	<div class="question_container">
+		<p class="question_text"><%= question.title%></p>
+		<ul class="response_list">
+			<% question.responses.each do |response| %>
+				<div class="response_div">
+					<input class="response_radio_button" type="radio" name="<%=question.title.chop%>_button" value=<%=response.answer%>>
+					<li class="response_list_item"><%= response.answer %></li>
+				</div>
+			<% end %>
+		</ul>
+	</div>
+<% end %>
+
+	<input type="text" value="LOL" name="lll">
+	<input type="submit" value="Submit." name="submit_button">
+</form>
+
+<script>
+	$(".response_radio_button").click(function() {
+		var name = $(this).attr("value");
+		alert("CLICKED ON ... " + name); // works
+	})
+</script>
