--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,3 +1,5 @@
+* { box-sizing: border-box; }
+
 .index_main_body{
   position: absolute;
   top: 150px;
@@ -30,3 +32,41 @@ a:active {
     color: navy;
     text-decoration: none;
 }
+
+
+
+/* VIEW SURVEY STUFF */
+
+
+.view_survey_title {
+	text-align: center;
+	font-size: 2.5em;
+}
+
+.question_container {
+	width: 90%;
+	min-height: 100px;
+	padding: 15px;
+	border-bottom: 1px solid black;
+}
+
+.response_list {
+
+}
+
+.response_list_item {
+	margin-bottom: 3px;
+	display: inline;
+}
+
+.response_div {
+	width: 200px;
+	margin-bottom: 5px;
+}
+
+.response_radio_button {
+	margin-left: 3px;
+}
+
+
+
