--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,7 +20,7 @@
 </head>
 <body>
   <ul class="navbar">
-    <li><a  href="/">Return Home</a></li>
+    <li><a  href="/">Home</a></li>
     <li><a  href="/login"> Logout </a></li>
   </ul>
 
