--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,8 +20,8 @@
 </head>
 <body>
   <ul class="navbar">
-    <li><a  href="/">Home</a></li>
-    <li><a  href="/login"> Logout </a></li>
+    <li><a class="navbar_link" href="/">Home</a></li>
+    <li><a class="navbar_link"href="/login"> Logout </a></li>
   </ul>
 
 
