survey page is stylized.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,16 +21,17 @@
 <body>
   <ul class="navbar">
     <li><a class="navbar_link" href="/">Home</a></li>
-    <li><a class="navbar_link"href="/login"> Logout </a></li>
+    <li><a class="navbar_link" href="/login"> Logout </a></li>
+    <li><a class="navbar_link" href="/survey/new"> Create New </a></li>
+    <li><a class="navbar_link" href="/surveys"> Surveys </a></li>
   </ul>
 
-  <div class="right_nav_bar">
-    <a href="/surveys"> Surveys </a>
-  </div>
+  <!-- <div class="right_nav_bar">
+  </div -->
 
-  <div class="right_nav_bar_2">
-    <a href="/survey/new"> New Survey </a>
-  </div>
+ <!--  <div class="right_nav_bar_2">
+    <a href="/survey/new"> Create New Survey </a>
+  </div> -->
 
 
   <%= yield %>
