--- a/app/views/surveys.erb
+++ b/app/views/surveys.erb
@@ -1,6 +1,7 @@
-  <div>
+  <div id="surveytable">
+    <h1>Find a Survey to Take</h1>
       <% @survey.reverse.each do |survey| %>
       <ul>
-        <li><a href="/survey/<%=survey.id%>"><%= survey.title %> </a></li> </ul>
+        <li><a class="surveylinks" href="/survey/<%=survey.id%>"><%= survey.title %> </a></li> </ul>
       <% end %>
     </div>
