--- a/app/views/surveys.erb
+++ b/app/views/surveys.erb
@@ -1,7 +1,10 @@
   <div id="surveytable">
     <h1>Find a Survey to Take</h1>
+    <div class="pageContent">
       <% @survey.reverse.each do |survey| %>
       <ul>
         <li><a class="surveylinks" href="/survey/<%=survey.id%>"><%= survey.title %> </a></li> </ul>
       <% end %>
+  </div>
     </div>
+
