--- a/app/views/take_survey.erb
+++ b/app/views/take_survey.erb
@@ -1,11 +1,11 @@
 <h1 class="view_survey_title">Take the '<%=@survey_name%>'</h1>
 
 <form action="/survey/<%=@id%>/take/submit" method="post">
-<% @questions.each do |question| %>
+<% @questions.order(:title).each do |question| %>
  <div class="question_container">
   <p class="question_text"><%= question.title%></p>
   <ul class="response_list">
-   <% question.responses.each do |response| %>
+   <% question.responses.order(:answer).each do |response| %>
     <div class="response_div">
      <input class="response_radio_button" type="radio" name="<%=question.title.chop%>_button" value=<%=response.answer%>>
      <li class="response_list_item"><%= response.answer %></li>
