--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -20,9 +20,9 @@
       <br><br>
       Password: <input type="password" name="password" placeholder="******">
       <br><br>
-      <input type="submit" value="Log in!">
+      <input type="submit" style="font-size: large;   color: light grey; background-color: #2AA560;" value=" Login! ">
     </form>
-    <br><br><br>
+    <br>
     <form action='/register' method="post">
       Enter Your Email: <input type="text" name="user_name" placeholder="User Name">
       <br><br>
@@ -30,7 +30,9 @@
       <br><br>
       What's your Name: <input type="text" name="name" placeholder="John Doe">
       <br><br>
-      <input type="submit" value="Register!">
+<!--       <input type="button" value="Register!">
+ -->      <input type="submit" style="font-size: large;   color: light grey; background-color: #2AA560;" value=" Register! ">
+
     </form>
 </div>
 
