--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,8 +1,10 @@
 <title>Welcome to Squirrel Monkey</title>
 
 <head>
+  <div class="welcome">
   <h3>Welcome <%= User.find(session_current_user_id).email%></h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vestibulum tincidunt eleifend. Integer feugiat sit amet velit et condimentum. Integer non eros condimentum, ornare eros quis, mattis massa. Vivamus fringilla tempus enim in sagittis. Pellentesque tincidunt turpis et odio dignissim hendrerit. Nam magna est, tempor id nisi eu, convallis suscipit augue. Quisque venenatis efficitur nibh, auctor fringilla est viverra eu. Maecenas massa leo, aliquet ut sem et, blandit faucibus eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean iaculis pellentesque ipsum, ut posuere mauris posuere quis. Nulla quis tellus ut neque tincidunt mattis a sit amet nisl. Cras ut orci quis dolor bibendum rutrum sed vel massa.</p>
+  <br>
+    To Create a new survey click <STRONG>Create New</STRONG> in the navigation bar. To view and take surveys click on <STRONG>Surveys</STRONG> in the navigation bar.</div>
 
 
 
