--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -25,6 +25,7 @@
     <li><a class="navbar_link" href="/survey/new"> Create New </a></li>
     <li><a class="navbar_link" href="/surveys"> Surveys </a></li>
   </ul>
+  <img class="logo" src="imgs/squirrellogo.jpg">
   <%= yield %>
 </body>
 </html>
