--- a/app/views/new_survey.erb
+++ b/app/views/new_survey.erb
@@ -1,19 +1,20 @@
 <body>
 
+<div class="newSurvey">
 <form action="/survey" method="post">
   What is the survey?
   <br>
   <input type="text" name="title">
 
-  
+
   <br>
   <br>
-  <input type="submit" value="submit">
+    <input type="submit" style="font-size: large;   color: light grey; background-color: #2AA560;" value=" Submit ">
 
 
 </form>
 
-
+</div>
 
 
 </body>
